# Stimulus

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  sigslot.h  stimulus.h
cmake/: StimulusConfig.cmake.in
include/: stimulus.h
tests/: CMakeLists.txt  test_all_different.cpp  test_basic_connect_emit.cpp  test_chain.cpp  test_connect_once.cpp  test_connection.cpp  test_exceptions.cpp  test_execution_policy.cpp  test_filter.cpp  test_forward_signal.cpp  test_guard.cpp  test_map.cpp  test_map_transform.cpp  test_partial_call.cpp  test_partial_connection.cpp  test_pipe_operator.cpp  test_threads.cpp  test_transform.cpp  utilities.h
